--- a/Project 1/styles/homepage.style.css
+++ b/Project 1/styles/homepage.style.css
@@ -52,8 +52,7 @@ header>div:nth-child(2):hover{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* background-color: #691ded; */
-    width: 520px;
+    width: 500px;
     border-radius: 20px;
     padding: 40px;
     background-color: rgb(240, 240, 255);
@@ -64,4 +63,24 @@ header>div:nth-child(2):hover{
     display: flex;
     flex-direction: column;
     width: 100%;
+    gap: 20px;
+}
+
+form input, textarea {
+    padding: 10px;
+    border : 0.6px solid #8c8c8c;
+    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+}
+
+input::placeholder, textarea::placeholder {
+    color: #8c8c8c;
+}
+
+form button{
+    background-color: #691ded;
+    color: rgb(220, 220, 220);
+    border-radius: 10px;
+    padding: 10px;
+    border: 1px solid transparent;
+    
 }
