--- a/Project 1/styles/homepage.style.css
+++ b/Project 1/styles/homepage.style.css
@@ -82,5 +82,10 @@ form button{
     border-radius: 10px;
     padding: 10px;
     border: 1px solid transparent;
-    
+    cursor: pointer;
+}
+
+.close {
+    color: #691ded;
+    cursor: pointer;
 }
