--- a/Project 1/styles/homepage.style.css
+++ b/Project 1/styles/homepage.style.css
@@ -117,13 +117,47 @@ form button:hover, form button:focus{
 }
 
 .card{
-    width: 250px;
+    width: 240px;
     height: 380px;
     border: 1px solid black;
+    padding: 15px;
+    border-radius: 10px;
 }
 
 #container {
     display: grid;
     grid-template-columns: repeat(4 , 1fr);
-    padding: 40px 30px; 
+    padding: 40px 50px; 
 }
+
+.card>div:nth-child(1){
+    width: 100%;
+    height: 56%;
+}
+
+.card>div:nth-child(1) img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+.card h3 {
+    margin: 15px 0px;
+}
+
+.card p{
+    font-size: 14px;
+}
+
+.card button{
+    margin-top: 15px;
+    width: 100%;
+    padding: 7px;
+    background-color: #ffeeee;
+    border: 1px solid transparent;
+    border-radius: 7px;
+    color: #f56e6ed2;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+}
+
