--- a/Project 1/styles/homepage.style.css
+++ b/Project 1/styles/homepage.style.css
@@ -118,21 +118,21 @@ form button:hover, form button:focus{
 
 .card{
     width: 240px;
-    height: 380px;
-    border: 1px solid black;
+    height: 390px;
     padding: 15px;
     border-radius: 10px;
+    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;    border: 0.9px solid #43475545;
 }
 
 #container {
-    display: grid;
-    grid-template-columns: repeat(4 , 1fr);
+    display: flex;
+    gap: 10px;
     padding: 40px 50px; 
 }
 
 .card>div:nth-child(1){
     width: 100%;
-    height: 56%;
+    height: 190px;
 }
 
 .card>div:nth-child(1) img{
@@ -144,10 +144,13 @@ form button:hover, form button:focus{
 .card h3 {
     margin: 15px 0px;
     font-size: 17px;
+    letter-spacing: -0.6px;
+    line-height: 21px;
 }
 
 .card p{
     font-size: 14px;
+    line-height: 17px;
 }
 
 .card button{
