--- a/Project 1/styles/homepage.style.css
+++ b/Project 1/styles/homepage.style.css
@@ -126,6 +126,7 @@ form button:hover, form button:focus{
 
 #container {
     display: flex;
+    flex-wrap: wrap;
     gap: 10px;
     padding: 40px 50px; 
 }
