--- a/Project 1/styles/blogpage.css
+++ b/Project 1/styles/blogpage.css
@@ -1,14 +1,76 @@
+
+*{
+    font-family: 'Oswald', sans-serif;
+}
+
 header p{
     font-size: 28px;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&family=Poppins&family=Roboto+Condensed:wght@300&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Arimo&family=Oswald:wght@300;400&family=Poppins&family=Roboto+Condensed:wght@300&display=swap');
 
 header>div:nth-child(2){
     margin-right: 60px;
 }
 
-#container{
-    margin: 20px 15px;
+#Blogcontainer{
+    margin: 20px 25px;
     border-radius: 10px;
     box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;    border: 1.5px solid #43475545;
+    padding: 20px;
 }
 
+#Blogcontainer>div:nth-child(1){
+    border-radius: 15px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: #6725d8;
+    color: white;
+    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;    
+    border: 1.5px solid #43475545;
+}
+
+
+#Blogcontainer>div:nth-child(1) div:nth-child(2){
+    border: 2px solid white;
+    border-radius: 15px;
+    width: 275px;
+    height: 210px;
+    overflow: hidden;
+}
+
+
+#Blogcontainer>div:nth-child(1) div:nth-child(2) img{
+    width: 100%;
+    height: 100%;
+}
+
+#Blogcontainer>div:nth-child(1) div:nth-child(1){
+    max-width: 45%;
+}
+
+#Blogcontainer>div:nth-child(1) div:nth-child(1) h2{
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+
+#Blogcontainer>div:nth-child(1) div:nth-child(1) p{
+    font-size: 16px;
+    color: #d1d1d1;
+    letter-spacing: -0.3px;
+}
+
+#Blogcontainer>div:nth-child(2){
+    margin: 40px; 
+    margin-bottom: 10px;
+}
+
+#Blogcontainer>div:nth-child(2) p{
+    line-height: 23px;
+    font-family: 'Arimo', sans-serif;
+}
