--- a/Project 2/style.css
+++ b/Project 2/style.css
@@ -2,15 +2,24 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 header{
     padding: 20px;
-    background-color: #262628;
     color: white;
     display: flex;
     justify-content: center;
+    align-items: center;
+    font-size: 16px;
+}
+
+body{
+    background-color: #000024;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
@@ -18,47 +27,22 @@ header{
 .search_section{
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 200px;
+    width: 55%;
     justify-content: center;
     align-items: center;
+    border: 1px solid white;
+    background-color: white;
+    border-radius: 3px;
 }
 
 .search_section input{
-    width: 40%;
-    padding: 5px 15px;
-    font-size: 16px;
+    width: 90%;
+    padding: 9px 15px;
+    font-size: 14px;
     font-weight: 600;
     outline: none;
     border: none;
-}
-
-.search_section hr{
-    width: 38%;
-    border: 1.2px solid #0048ff;
-    border-radius: 10px;
-}
-
-.search_section button{
-    padding: 10px 20px;
-    margin: 8px;
-    font-size: 15px;
-    font-weight: 600;
-    background-color: #1f851f;
-    color: white;
-    border: 2px solid transparent;
-    border-radius: 10px;
-    cursor: pointer;
-}
-
-.search_section button:hover{
-    border-color: white;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-}
-
-.search_section button:active{
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-    background-color: #1f851fcc;
+    text-align: center;
 }
 
 .container {
@@ -72,24 +56,51 @@ header{
 
 .container .box{
     width: 250px;
-    height: 400px;
-    padding: 5px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    height: 310px;
+    padding: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: #272772;
+    border-radius: 20px;
 }
 
-.box img{
-    width: 100%;
-    height: 70%;
+.box>div{
+    width: 80%;
+    height: 65%;
+    margin: 10px 20px;
+    background-size:cover;
+    background-position: center;
 }
 
-/* .box h1{
-    height: 10%;
-} */
+.box>div:hover, .box>div:focus{
+    width: 85%;
+    border: 1px solid white;
+    transition: all 0.6s;
+}
 
 .box p{
-    height: 10%;
+    font-size: 13px;
+    margin: 10px 0px;
+    margin-top: 5px;
+    color: white;
+    font-weight: 600;
+}
+
+.box button{
+    width: 100%;
+    color: white;
+    background-color: #ff3056;
+    padding: 10px;
+    border: 1px solid transparent;
+    border-radius: 10px;
+    font-size: 13px;
+    cursor: pointer;
+}
+
+.box button:hover, .box button:focus{
+    border: 1px solid white;
+    background: linear-gradient(#38189f, #d04c0a);
+    transition: all 0.6s;
 }
