--- a/Project 2/style.css
+++ b/Project 2/style.css
@@ -104,3 +104,13 @@ main{
     background: linear-gradient(#38189f, #d04c0a);
     transition: all 0.6s;
 }
+
+.error{
+    width: 100%;
+    height: 300px;
+    color: white;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
