--- a/Project 3/src/components/TodoInput/input.module.css
+++ b/Project 3/src/components/TodoInput/input.module.css
@@ -33,3 +33,9 @@
     background-color: #621d75;
     cursor: pointer;
 }
+
+.inputBox button:hover{
+    border: 2px solid rgb(0, 255, 123);
+    background-color: #ad54c6;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+}
