--- a/Project 3/src/components/Card/card.module.css
+++ b/Project 3/src/components/Card/card.module.css
@@ -38,13 +38,15 @@
     cursor: pointer;
 }
 
-.card>div button:nth-child(1):hover{
+.card>div button:nth-child(1):hover,
+.card>div button:nth-child(1):focus{
     border: 1px solid white;
     background-color: #005525;
     transition: all 0.3s;
 }
 
-.card>div button:nth-child(2):hover{
+.card>div button:nth-child(2):hover,
+.card>div button:nth-child(2):focus{
     border: 1px solid white;
     background-color: #550017;
     transition: all 0.3s;
