--- a/Project 3/src/components/TodoInput/input.module.css
+++ b/Project 3/src/components/TodoInput/input.module.css
@@ -20,8 +20,14 @@
 .inputBox input {
     outline: none;
     border: none;
+    border-bottom: 2px solid transparent;
     font-size: 17px;
     padding: 10px;
+}
+
+.inputBox input:focus {
+    border-bottom: 2px solid #0077ff;
+    transition: all 0.3s;
 }
 
 .inputBox button {
